Version 1.9.10, in progress
- Update translations
- New command "markers": manipulate observation marker strings
- "delete" command: add a --force option to permit deletion of
  series in loops (to be used with caution!)
- "data" command: allow this in loops
- "open" command: rename the option for reading fixed format data
  from --cols to --fixed-cols; also allow use of this command
  in loops (gretlcli only)
- "dpanel" and "arbond" commands: indicate in the model printout 
  if the AR, Sargan or Wald tests failed
- "gnuplot" command: add a --with-lp option to use linespoints
- "modtest" command: support the autocorrelation option for ARMA
  models, using the Ljung-Box statistic
- "boxplot" command: add a --matrix option (works in the same way
  as with the "gnuplot" command)
- "freq" command: add a --matrix option to select a column from a
  named matrix instead of a series
- Add three new functions: ghk(), halton() and isnan()
- Add two new accessors: $pi and $huge
- Fix for ARMA forecasts: ensure that the dynamic portion starts
  as soon as possible when the --dynamic option is given
- Switch to using libcurl for HTTP transaction support
- Add two new element-wise matrix operators, ".>=" and ".<=",
  (greater than or equal, less than or equal)
- Fix some buggy behavior in regard to empty matrices
- Fix for use of "catch" (to trap errors) in loops
- Allow passing "null" as an argument for lists in user-defined
  functions
- Enable indexing into named lists to get the ID numbers of series
- Bivariate normal cdf: switch from Drezner(78) to a faster and
  more robust algorithm
- randgen() function, gamma distribution option: switch to the fast
  Marsaglia-Tsang generator for gamma variates
- Fix bivariate normal cdf calculator (would return NAs in some
  pathological cases)
- GUI: add check for updated addons, such as gig
- GUI icon view: enable copying of graphs and matrices
- GUI graphs: in saving as PDF, remember the user's choice of font